--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
   min-width: 140px;
 }
 
+.App .advanced-settings-toggle {
+  margin-bottom: 8px;
+}
+
 .App .advanced-settings {
   position: relative;
   width: 100%;
