--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,20 @@
   padding-bottom: 72px;
 }
 
+.App .app-header {
+  padding: 10px 12px;
+  margin-bottom: 24px;
+  border-bottom: solid 1px rgba(68, 34, 34, 0.05);
+  background-color: #20212b;
+  color: #fff;
+  font-size: 14px;
+  text-align: center;
+}
+
+.App .app-header .title {
+  font-weight: bold;
+}
+
 .App .MuiFormControl-root {
   min-width: 140px;
 }
